--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.1",
+    "@livekit/components-react": "^1.3.0",
+    "@livekit/components-styles": "^1.0.6",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -32,6 +34,8 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "emoji-mart": "^5.5.2",
+    "livekit-client": "^1.13.4",
+    "livekit-server-sdk": "^1.2.6",
     "lucide-react": "^0.279.0",
     "next": "latest",
     "next-themes": "^0.2.1",
